[package]
name = "jasper"
version = "0.1.0"
edition = "2021"
authors= ["Simon Bindefeld simonnfts@gmail.com X (Formerly Twitter): @0xSimon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive","cargo"]}
keccak-hash = "0.10.0"
rayon = "1.8.1"
regex = "1.10.3"
serde ={version =  "1.0.196", features = ["derive"]}
serde_json = "1.0.112"
walkdir = "2.4.0"
